# Python_project

./: Django_project.postman_collection.json  pyproject.toml
apps/auth/: apps.py
apps/auto_parks/: models.py  serializers.py  urls.py  views.py
apps/auto_parks/migrations/: 0001_initial.py  0002_initial.py
apps/cars/: models.py  serializer.py  urls.py  views.py
apps/cars/migrations/: 0001_initial.py  0002_initial.py
apps/cars_to_auto_park/: managers.py  models.py  serializers.py  urls.py  views.py
apps/cars_to_auto_park/migrations/: 0001_initial.py
apps/users/: managers.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
configs/: settings.py  urls.py
configs/extra_conf/: rest_conf.py
core/: pagination.py
core/enums/: regex_enum.py
core/permissions/: is_admin_or_write_only_permission.py  is_auto_park.py  is_premium.py  is_seperuser.py
core/services/: file_service.py
