[tool.poetry]
name = "python-project"
version = "0.1.0"
description = ""
authors = ["Notebook <zekserj@ukr.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
djangorestframework = "^3.14.0"
mysqlclient = "^2.2.4"
djangorestframework-simplejwt = "^5.3.1"
django-filter = "^24.1"




[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
